fixed flickering

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,5 +303,4 @@ color: #d2d2d2;
 
 .removeButton {
     color: #cc0000;
-    float: right;
 }
